[package]
name = "convolution"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.4.0"
jack = "0.8.4"
realfft = "3.0.0"
rustfft = "6.0.1"
rfd = "0.8.2"
vizia = { git = "https://github.com/vizia/vizia.git", rev = "b2f100d" }
rand = "0.8.5"
plotters = "0.3.1"
# dsp-chain = "0.13.1"
# dsp-chain = {git="https://github.com/RustAudio/dsp-chain.git"}
