[package]
name = "convolution"
version = "0.1.0"
edition = "2021"

[lib]
# The `lib` artifact is needed for the standalone target
name = "convolution"
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
symphonium = "0.6.1"
crossbeam = "0.8.1"
atomic_float = "0.1"
glob = "0.3.2"

realfft = "3.0.0"
rustfft = "6.0.1"

nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", features = ["assert_process_allocs", "standalone"] }
vizia_plug = { git = "https://github.com/vizia/vizia-plug" }


[workspace]
members = ["xtask"]

[profile.release-with-debug]
inherits = "release"
debug = true
